add description comments section Blockquotes

--- a/0x00-html_advanced/30-styleguide.html
+++ b/0x00-html_advanced/30-styleguide.html
@@ -78,6 +78,8 @@
                     </div>
                 </header>
             </section>
+
+            <!-- Blockquotes -->
             <section>
                 <header>
                     <h2>Blockquotes</h2>
