--- a/0x07-accessibility/fix-a11y/05-index.html
+++ b/0x07-accessibility/fix-a11y/05-index.html
@@ -156,8 +156,8 @@
               <form action="#" method="post">
                 <div class="input-group">
                   <label for="email" class="visually-hidden"></label>
-                  <input id="email" class="form-control" type="text" name="email" placeholder="Enter Email Address">
-                  <div class="input-group-btn"><a class="btn" type="submit">Validate</a></div>
+                  <input id="email" class="form-control" type="email" name="email" autocomplete="email" aria-required="true" required>
+                  <div class="input-group-btn"><button class="btn" type="submit">Validate</button></div>
                 </div>
               </form>
             </div>
