--- a/0x07-accessibility/fix-a11y/09-index.html
+++ b/0x07-accessibility/fix-a11y/09-index.html
@@ -22,7 +22,7 @@
               <p><a href="#">Pages</a></p>
               <p><a href="#">Contact</a></p>
             </div>
-          </div>
+          </nav>
         </div>
       </div>
     </header>
@@ -174,6 +174,6 @@
           </div>
         </div>
       </div>
-    </div>
+    </footer>
   </body>
 </html>
