--- a/0x0A-Bootstrap/1-index.html
+++ b/0x0A-Bootstrap/1-index.html
@@ -10,51 +10,51 @@
     </head>
     <body>
         <div class="row">
-            <div class="col-lg bg-primary text-white text-center">Primary</div>
-            <div class="col-lg bg-success text-white text-center">Success</div>
-            <div class="col-lg bg-danger text-white text-center">Danger</div>
-            <div class="col-lg bg-warning text-white text-center">Warning</div>
+            <div class="col-lg p-2 bg-primary text-white text-center">Primary</div>
+            <div class="col-lg p-2 bg-success text-white text-center">Success</div>
+            <div class="col-lg p-2 bg-danger text-white text-center">Danger</div>
+            <div class="col-lg p-2 bg-warning text-white text-center">Warning</div>
         </div>
 
         <hr />
 
         <div class="row">
-            <div class="col bg-primary text-white text-center">Primary</div>
-            <div class="col bg-success text-white text-center">Success</div>
-            <div class="col bg-danger text-white text-center">Danger</div>
-            <div class="col bg-warning text-white text-center">Warning</div>
+            <div class="col-sm p-2 bg-primary text-white text-center">Primary</div>
+            <div class="col-sm p-2 bg-success text-white text-center">Success</div>
+            <div class="col-sm p-2 bg-danger text-white text-center">Danger</div>
+            <div class="col-sm p-2 bg-warning text-white text-center">Warning</div>
         </div>
 
         <hr />
 
         <div class="row">
-            <div class="col bg-primary text-white text-center" >Primary</div>
-            <div class="col bg-success text-white text-center">Success</div>
-            <div class="col bg-danger text-white text-center">Danger</div>
+            <div class="col-lg-2 p-2 bg-primary text-white text-center" >Primary</div>
+            <div class="col-lg-4 p-2 bg-success text-white text-center">Success</div>
+            <div class="col-lg-6 p-2 bg-danger text-white text-center">Danger</div>
         </div>
 
         <hr />
 
         <div class="row">
-            <div class="col bg-primary text-white text-center">Primary</div>
-            <div class="col bg-success text-white text-center">Success</div>
-            <div class="col bg-danger text-white text-center">Danger</div>
-            <div class="col bg-warning text-white text-center">Warning</div>
+            <div class="col order-xl-1 order-lg-2 order-md-3 p-2 order-4 bg-primary text-white text-center">Primary</div>
+            <div class="col order-xl-2 order-lg-3 order-md-4 p-2 order-1 bg-success text-white text-center">Success</div>
+            <div class="col order-xl-3 order-lg-4 order-md-1 p-2 order-2 bg-danger text-white text-center">Danger</div>
+            <div class="col order-xl-4 order-lg-1 order-md-2 p-2 order-3 bg-warning text-white text-center">Warning</div>
         </div>
 
         <hr/>
 
         <div class="row">
-            <div class="col bg-primary text-white text-center">Primary</div>
-            <div class="col bg-success text-white text-center">Success</div>
+            <div class="col-md-2 p-2 bg-primary text-white text-center">Primary</div>
+            <div class="col-md-2 ml-auto p-2 bg-success text-white text-center">Success</div>
         </div>
 
         <hr/>
 
         <div class="row">
-            <div class="col bg-primary text-white text-center">Primary</div>
-            <div class="col bg-success text-white text-center">Success</div>
-            <div class="col bg-danger text-white text-center">Danger</div>
+            <div class="col-md-2 p-2 bg-primary text-white text-center">Primary</div>
+            <div class="col-md-2 offset-md-4 p-2 bg-success text-white text-center">Success</div>
+            <div class="col-md-2 offset-md-2 p-2 bg-danger text-white text-center">Danger</div>
         </div>
     </body>
 </html>
