--- a/0x0A-Bootstrap/3-index.html
+++ b/0x0A-Bootstrap/3-index.html
@@ -54,16 +54,16 @@
         </div>
 
         <!-- Modal -->
-        <div id="playModal" tabindex="-1" role="dialog" aria-labelledby="playModal" aria-hidden="true">
-            <div role="document">
-                <div>
-                    <div>
-                        <h5 id="exampleModalLabel">Play with CodePen</h5>
-                        <button type="button" data-dismiss="modal" aria-label="Close">
+        <div class="modal fade" id="playModal" tabindex="-1" role="dialog" aria-labelledby="playModal" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Play with CodePen</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
-                    <div>
+                    <div class="modal-body">
                         <p>
                             CodePen is an online community for testing and showcasing user-created HTML, CSS and JavaScript code snippets. 
                             It functions as an online code editor and open-source learning environment, where developers can create code snippets, called "pens," and test them.
@@ -76,24 +76,24 @@
                             CodePen is one of the largest communities for web designers and developers to showcase their coding skills, with an estimated 330,000 registered users and 14.16 million monthly visitors.
                         </p>
 
-                        <form>
-                            <div>
+                        <form class="border-top pt-3">
+                            <div class="mb-4">
                                 <h5>Connect</h5>
                             </div>
-                            <div>
-                                <label for="username">Username</label>
-                                <div>
-                                    <input type="text" id="username" />
+                            <div class="form-group row">
+                                <label for="username" class="col-2 col-form-label">Username</label>
+                                <div class="col-10">
+                                    <input type="text" class="form-control" id="username" />
                                 </div>
                             </div>
-                            <div>
-                                <label for="passowrd">Password</label>
-                                <div>
-                                    <input type="password" id="passowrd" />
+                            <div class="form-group row">
+                                <label for="passowrd" class="col-2 col-form-label">Password</label>
+                                <div class="col-10">
+                                    <input type="password" class="form-control" id="passowrd" />
                                 </div>
                             </div>
-                            <div>
-                                <button type="submit">Connect</button>
+                            <div class="d-flex justify-content-end mb-4">
+                                <button type="submit" class="btn btn-danger">Connect</button>
                             </div>
                         </form>
                     </div>
